Changed Kopernicus OnDemand OFF MM file to optional (not really required any more). Fixed new SDD commands. Added screen messages when SDDs move science.

--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/PluginData/Config.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/PluginData/Config.cfg
@@ -18,8 +18,19 @@ TSTSettings
 	debugging = False
 	Tooltips = True
 	maxChemCamContracts = 3
-	photoOnlyChemCamContracts = True
 	ZoomSkyBox = True
+	scienceUndiscoveredScope = 20
+	scienceDiscoveredScope = 2
+	repUndiscoveredScope = 20
+	repDiscoveredScope = 2
+	fundsUndiscoveredScope = 600
+	fundsdiscoveredScope = 35
+	scienceUndiscoveredChem = 20
+	scienceDiscoveredChem = 5
+	repUndiscoveredChem = 35
+	repDiscoveredChem = 5
+	fundsUndiscoveredChem = 800
+	fundsdiscoveredChem = 40
 }
 TSTStockPlanetOrder
 {
@@ -32,4 +43,8 @@ TSTRSSPlanetOrder
 TSTOPMPlanetOrder
 {
 	planets = Sun,Kerbin,Mun,Minmus,Duna,Eve,Moho,Jool,Dres,Ike,Laythe,Gilly,Tylo,Vall,Bop,Pol,Sarnus,Eeloo,Ovok,Slate,Tekto,Urlum,Polta,Priax,Wal,Tal,Neidon,Thatmo,Nissee,Plock,Galaxy1,Galaxy2,Galaxy3,Galaxy4,Galaxy5,Galaxy6,Galaxy7,Galaxy8
+}
+TSTNHPlanetOrder
+{
+	planets = Sun,Kerbin,Mun,Sonnah,Aptur,Serran,Laythe,Derso,Lave,Eli,Jool,Eve,Dres,Duna,Ike,Leouch,Nolas,Arin,Astid,Atell,Titanus,Ete,Tylo,Oree,Moh,Moho,Ernus,Eeloo,Minmus,Vanor,Tidus,Pol,Gilly,Vall,Etal,Bop,Galaxy1,Galaxy2,Galaxy3,Galaxy4,Galaxy5,Galaxy6,Galaxy7,Galaxy8
 }
