--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
@@ -47,19 +47,19 @@ MODULE
     textureQuadName = flag
 }
 
-MODULE
-{
-	name =  TSTGyroReactionWheel
-	PitchTorque = 5
-	YawTorque = 5
-	RollTorque = 5
-	powerscale = 0.1
-	sensitivity = 0.002
-	
-	RESOURCE
-	{
-		name = ElectricCharge
-		rate = 1
-	}
-}
+//MODULE
+//{
+//	name =  TSTGyroReactionWheel
+//	PitchTorque = 5
+//	YawTorque = 5
+//	RollTorque = 5
+//	powerscale = 0.1
+//	sensitivity = 0.002
+//	
+//	RESOURCE
+//	{
+//		name = ElectricCharge
+//		rate = 1
+//	}
+//}
 }
