--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
@@ -43,19 +43,19 @@ MODULE
 	cameraTransformName = CameraTransform	
 	lookTransformName = LookTransform
 }
-MODULE
-{
-	name =  TSTGyroReactionWheel
-	PitchTorque = 5
-	YawTorque = 5
-	RollTorque = 5
-	powerscale = 0.2
-	sensitivity = 0.05
+//MODULE
+//{
+//	name =  TSTGyroReactionWheel
+//	PitchTorque = 5
+//	YawTorque = 5
+//	RollTorque = 5
+//	powerscale = 0.2
+//	sensitivity = 0.05
 	
-	RESOURCE
-	{
-		name = ElectricCharge
-		rate = 1
-	}
-}
+//	RESOURCE
+//	{
+//		name = ElectricCharge
+//		rate = 1
+//	}
+//}
 }
