Ready for KSP 1.3

--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
@@ -1,65 +1,49 @@
 PART
 {
-name = tarsierAdvSpaceTelescope
-module = Part
-author = TarsierTech
+	name = tarsierAdvSpaceTelescope
+	module = Part
+	author = TarsierTech
 
-mesh = model.mu
-rescaleFactor = 1
+	mesh = model.mu
+	rescaleFactor = 1
 
-node_attach = 0.0, 0, 0, 0.0, -1.0, 0.0
-node_stack_bottom01 = 0.0, 0, 0, 0.0, -1.0, 0.0
+	node_attach = 0.0, 0, 0, 0.0, -1.0, 0.0
+	node_stack_bottom01 = 0.0, 0, 0, 0.0, -1.0, 0.0
 
-TechRequired = advScienceTech
-entryCost = 20000
-cost = 25000
-category = Science
-subcategory = 0
-title = Deep Space Telescope
-manufacturer = Tarsier Space Technology
-description = The pinnacle of Kerbal technology, capable of peering into the deepest parts of the Kerbol system. Instructions not included.
+	TechRequired = advScienceTech
+	entryCost = 20000
+	cost = 25000
+	category = Science
+	subcategory = 0
+	title = #autoLOC_TST_0221 //Deep Space Telescope
+	manufacturer = #autoLOC_TST_0236 //Tarsier Space Technology
+	description = #autoLOC_TST_0222 //The pinnacle of Kerbal technology, capable of peering into the deepest parts of the Kerbol system. Instructions not included.
 
-attachRules = 1,0,1,0,0
+	attachRules = 1,0,1,0,0
 
-// --- standard part parameters ---
-mass = 1.25
-dragModelType = default
-maximum_drag = 0.2
-minimum_drag = 0.2
-angularDrag = 1
-crashTolerance = 8
-maxTemp = 1200 // = 2900
-PhysicsSignificance = 0
-bulkheadProfiles = srf
-tags = tarsier tst advanced telescope science
+	// --- standard part parameters ---
+	mass = 1.25
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 1
+	crashTolerance = 8
+	maxTemp = 1200 // = 2900
+	PhysicsSignificance = 0
+	bulkheadProfiles = srf
+	tags = #autoLOC_TST_0223 //tarsier tst advanced telescope science
 
-MODULE
-{
-	name = TSTSpaceTelescope
-	maxZoom = 6
-	xmitDataScalar = 0.5
-	labBoostScalar = 1.2
-}
+	MODULE
+	{
+		name = TSTSpaceTelescope
+		maxZoom = 6
+		xmitDataScalar = 0.5
+		labBoostScalar = 1.2
+	}
 
-MODULE
-{
-    name = FlagDecal
-    textureQuadName = flag
-}
-
-//MODULE
-//{
-//	name =  TSTGyroReactionWheel
-//	PitchTorque = 5
-//	YawTorque = 5
-//	RollTorque = 5
-//	powerscale = 0.1
-//	sensitivity = 0.002
-//	
-//	RESOURCE
-//	{
-//		name = ElectricCharge
-//		rate = 1
-//	}
-//}
+	MODULE
+	{
+		name = FlagDecal
+		textureQuadName = flag
+	}
 }
