--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
@@ -14,9 +14,9 @@ entryCost = 7000
 cost = 7000
 category = Science
 subcategory = 0
-title = ChemCam
-manufacturer = Tarsier Space Technology
-description =  The ChemCam fires high powered lasers at rocks and works out what they're made of from the colour of the flame. Kerbal scientists came up with the idea while ritualistically burning office furniture and noticing the different colours it gave off.
+title = #autoLOC_TST_0053 //ChemCam
+manufacturer = #autoLOC_TST_0236 //Tarsier Space Technology
+description =  #autoLOC_TST_0224 //The ChemCam fires high powered lasers at rocks and works out what they're made of from the colour of the flame. Kerbal scientists came up with the idea while ritualistically burning office furniture and noticing the different colours it gave off.
 
 attachRules = 1,1,0,0,1
 
@@ -30,7 +30,7 @@ crashTolerance = 8
 maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
-tags = tarsier tst advanced science chemcam rovercam camera
+tags = #autoLOC_TST_0225 //tarsier tst advanced science chemcam rovercam camera
 
 MODULE
 {
