--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
@@ -14,9 +14,9 @@ entryCost = 2200
 cost = 900
 category = Science
 subcategory = 0
-title = Science Hard Drive (Small)
-manufacturer = Tarsier Space Technology
-description = A small hard drive, great for storing science data but unfortunately prone to data corruption. Can be attached and removed in EVA using KIS/KAS.
+title = #autoLOC_TST_0226  //Science Storage Device (Small)
+manufacturer = #autoLOC_TST_0236 //Tarsier Space Technology
+description = #autoLOC_TST_0227 //A small hard drive, great for storing science data but unfortunately prone to data corruption. Can be attached and removed in EVA using KIS/KAS.
 attachRules = 0,1,0,0,1
 
 // --- standard part parameters ---
@@ -29,7 +29,7 @@ crashTolerance = 8
 maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
-tags = tarsier tst advanced science sdd harddrive disk storage
+tags = #autoLOC_TST_0228 //tarsier tst advanced science sdd harddrive disk storage
 
 MODULE
 {
