--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
@@ -18,9 +18,9 @@ entryCost = 5000
 cost = 1800
 category = Science
 subcategory = 0
-title = Science Hard Drive (Large)
-manufacturer = Tarsier Space Technology
-description = A larger hard drive, made by connecting 4 smaller ones together. They have less data corruption, but it has a higher power usage.
+title = #autoLOC_TST_0229 //Science Storage Device (Large)
+manufacturer = #autoLOC_TST_0236 //Tarsier Space Technology
+description = #autoLOC_TST_0230 //A larger hard drive, made by connecting 4 smaller ones together. They have less data corruption, but it has a higher power usage.
 attachRules = 1,0,1,1,0
 
 // --- standard part parameters ---
@@ -33,7 +33,7 @@ crashTolerance = 8
 maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
-tags = tarsier tst advanced science sdd harddrive disk storage
+tags = #autoLOC_TST_0228 //tarsier tst advanced science sdd harddrive disk storage
 
 MODULE
 {
