--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
@@ -1,61 +1,46 @@
 PART
 {
-name = tarsierSpaceTelescope
-module = Part
-author = TarsierTech
+	name = tarsierSpaceTelescope
+	module = Part
+	author = TarsierTech
 
-mesh = model.mu
-rescaleFactor = 1
+	mesh = model.mu
+	rescaleFactor = 1
 
-node_attach = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
-node_stack_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
+	node_attach = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
+	node_stack_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
 
-TechRequired = scienceTech
-entryCost = 10000
-cost = 10000
-category = Science
-subcategory = 0
-title = Space Telescope
-manufacturer = Tarsier Space Technology
-description = The pinnacle of Kerbal technology, capable of peering into the deepest parts of the Kerbol system. Instructions not included.
+	TechRequired = scienceTech
+	entryCost = 10000
+	cost = 10000
+	category = Science
+	subcategory = 0
+	title = #autoLOC_TST_0058 //Space Telescope
+	manufacturer = #autoLOC_TST_0236 //Tarsier Space Technology
+	description = #autoLOC_TST_0232 //The pinnacle of Kerbal technology, capable of peering into the deepest parts of the Kerbol system. Instructions not included.
 
-attachRules = 1,1,0,0,1
+	attachRules = 1,1,0,0,1
 
-// --- standard part parameters ---
-mass = 0.25
-dragModelType = default
-maximum_drag = 0.2
-minimum_drag = 0.2
-angularDrag = 1
-crashTolerance = 8
-maxTemp = 1200 // = 2900
-PhysicsSignificance = 0
-bulkheadProfiles = srf
-tags = tarsier tst advanced telescope science
+	// --- standard part parameters ---
+	mass = 0.25
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 1
+	crashTolerance = 8
+	maxTemp = 1200 // = 2900
+	PhysicsSignificance = 0
+	bulkheadProfiles = srf
+	tags = #autoLOC_TST_0223 //tarsier tst advanced telescope science
 
-MODULE
-{
-	name = TSTSpaceTelescope
-	maxZoom = 4
-	xmitDataScalar = 0.5
-	labBoostScalar = 1.2 
-	baseTransformName = Telescope	
-	cameraTransformName = CameraTransform	
-	lookTransformName = LookTransform
-}
-//MODULE
-//{
-//	name =  TSTGyroReactionWheel
-//	PitchTorque = 5
-//	YawTorque = 5
-//	RollTorque = 5
-//	powerscale = 0.2
-//	sensitivity = 0.05
-	
-//	RESOURCE
-//	{
-//		name = ElectricCharge
-//		rate = 1
-//	}
-//}
+	MODULE
+	{
+		name = TSTSpaceTelescope
+		maxZoom = 4
+		xmitDataScalar = 0.5
+		labBoostScalar = 1.2 
+		baseTransformName = Telescope	
+		cameraTransformName = CameraTransform	
+		lookTransformName = LookTransform
+	}
 }
