--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMOPMScienceDefs.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMOPMScienceDefs.cfg
@@ -2,20 +2,20 @@
 {
 	@RESULTS
 	{		
-		LookingAtSarnus=A gas giant. The rings around it are beautiful.
-		LookingAtHale=This tiny moon is so hard to see through Sarnus' rings, but it must be responsible for keeping the rings in place.
-		LookingAtOvok=It looks like a giant egg. Could it be an unhatched space kraken?
-		LookingAtSlate=It looks a lot like Kerbin but without an atmosphere, closer inspection is warranted.
-		LookingAtTekto=There is a very thick atmosphere, possibly liquids on the surface. The possibilities here are beyond imagination.
-		LookingAtUrlum=An Ice giant. It looks very cold. The colours are simply breathtaking.
-		LookingAtPolta=An icy moon with striking swils in its terrain.
-		LookingAtPriax=A heavily cratered moon.
-		LookingAtWal=Rocky on the surface yet the golden colour can't help but make you think of well.. gold.
-		LookingAtTal=A sub-satelite of Wal. It also has a shiny, golden surface
-		LookingAtNeidon=Another ice giant. The strikingly beautiful blue and purple colours are mesmerising.
-		LookingAtThatmo=An icy moon that appears to have a very thin atmosphere.
-		LookingAtNissee=This tiny moon looks like a marble.
-		LookingAtPlock=It looks like a icy dwarf. It's a very long way away.
+		LookingAtSarnus=#autoLOC_TST_0125 //A gas giant. The rings around it are beautiful.
+		LookingAtHale=#autoLOC_TST_0126 //This tiny moon is so hard to see through Sarnus' rings, but it must be responsible for keeping the rings in place.
+		LookingAtOvok=#autoLOC_TST_0127 //It looks like a giant egg. Could it be an unhatched space kraken?
+		LookingAtSlate=#autoLOC_TST_0128 //It looks a lot like Kerbin but without an atmosphere, closer inspection is warranted.
+		LookingAtTekto=#autoLOC_TST_0129 //There is a very thick atmosphere, possibly liquids on the surface. The possibilities here are beyond imagination.
+		LookingAtUrlum=#autoLOC_TST_0130 //An Ice giant. It looks very cold. The colours are simply breathtaking.
+		LookingAtPolta=#autoLOC_TST_0131 //An icy moon with striking swils in its terrain.
+		LookingAtPriax=#autoLOC_TST_0132 //A heavily cratered moon.
+		LookingAtWal=#autoLOC_TST_0133 //Rocky on the surface yet the golden colour can't help but make you think of well.. gold.
+		LookingAtTal=#autoLOC_TST_0134 //A sub-satelite of Wal. It also has a shiny, golden surface
+		LookingAtNeidon=#autoLOC_TST_0135 //Another ice giant. The strikingly beautiful blue and purple colours are mesmerising.
+		LookingAtThatmo=#autoLOC_TST_0136 //An icy moon that appears to have a very thin atmosphere.
+		LookingAtNissee=#autoLOC_TST_0137 //This tiny moon looks like a marble.
+		LookingAtPlock=#autoLOC_TST_0138 //It looks like a icy dwarf. It's a very long way away.
 	}
 }
 
@@ -23,16 +23,16 @@
 {
 	@RESULTS
 	{		
-		HaleSrfLanded=There is nothing but rock, and amazing that we can keep the ChemCam on the ground to do any analysis of it's composition.
-		OvokSrfLanded=Laser analysis of the surface of Ovok reveals ice. Maybe it's not a space kraken egg after all.
-		SlateSrfLanded=Sustained blasts from the laser vaporize the surface layers of slate, showing a lot of very interesting compounds. If only there was an atmosphere.
-		TektoSrfLanded=The laser analysis indicates chlorine & hydrocarbons. Is this ethane? Could this support life?
-		PoltaSrfLanded=The surface steams as the ice on the surface melts under the gaze of the laser.
-		PriaxSrfLanded=The laser creates its own small crater but with so many already it will go unnoticed.		
-		WalSrfLanded=The laser analysis indicates there is no gold here.
-		TalSrfLanded=The laser analysis indicates ice and... gold.
-		ThatmoSrfLanded=Blasts from the laser vaporize the ice. Lots of ice.
-		NisseeSrfLanded=The laser has a hard time calibrating out here. But it appears to be rock, and marble?
-		PlockSrfLanded=How did we manage to get here. Analysis indicates ice.
+		HaleSrfLanded=#autoLOC_TST_0139 //There is nothing but rock, and amazing that we can keep the ChemCam on the ground to do any analysis of it's composition.
+		OvokSrfLanded=#autoLOC_TST_0140 //Laser analysis of the surface of Ovok reveals ice. Maybe it's not a space kraken egg after all.
+		SlateSrfLanded=#autoLOC_TST_0141 //Sustained blasts from the laser vaporize the surface layers of slate, showing a lot of very interesting compounds. If only there was an atmosphere.
+		TektoSrfLanded=#autoLOC_TST_0142 //The laser analysis indicates chlorine & hydrocarbons. Is this ethane? Could this support life?
+		PoltaSrfLanded=#autoLOC_TST_0143 //The surface steams as the ice on the surface melts under the gaze of the laser.
+		PriaxSrfLanded=#autoLOC_TST_0144 //The laser creates its own small crater but with so many already it will go unnoticed.		
+		WalSrfLanded=#autoLOC_TST_0145 //The laser analysis indicates there is no gold here.
+		TalSrfLanded=#autoLOC_TST_0146 //The laser analysis indicates ice and... gold.
+		ThatmoSrfLanded=#autoLOC_TST_0147 //Blasts from the laser vaporize the ice. Lots of ice.
+		NisseeSrfLanded=#autoLOC_TST_0148 //The laser has a hard time calibrating out here. But it appears to be rock, and marble?
+		PlockSrfLanded=#autoLOC_TST_0149 //How did we manage to get here. Analysis indicates ice.
 	}
 }
