--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMRSSScienceDefs.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMRSSScienceDefs.cfg
@@ -2,21 +2,21 @@
 {
 	@RESULTS
 	{		
-		LookingAtMercury=Mercury's surface is covered with craters of various ages; the ejecta from some newer craters is clearly visible through the telescope.
-		LookingAtVenus=Faint changes in the cloud cover suggest the presence of some high altitude mountains or volcanoes in this area.
-		LookingAtMoon=Much of the Moon's bright surface is covered with overlapping craters.
-		LookingAtMars=There seem to be a lot of red things on Mars, closer inspection is warranted.
-		LookingAtDeimos=This thing looks more like a large asteroid than a moon when viewed up close.
-		LookingAtPhobos=Up close, Phobos resembles nothing if not a large, very dark, asteroid.
-		LookingAtJupiter=Bands of different coloured clouds are visible in Jupiter's atmosphere; each band being driven in opposite directions by fierce winds.
-		LookingAtIo=Colourful yellow, red, and sometimes green materials coat areas of Io's surface, sometimes centered around active volcanoes.
-		LookingAtEuropa=Relatively smooth, bright white terrain covers most of Europa's surface.
-		LookingAtGanymede=Ganymede's terrain is heavily cratered in most areas and appears to be mostly water ice covered by a thin layer of dark regolith.
-		LookingAtCallisto=The surface of Callisto is almost saturated with impact craters, every further impact will almost always overlap with older craters.
-		LookingAtSaturn=Saturn's thick cloud layer obscures all but the outermost layers of its atmosphere.
-		LookingAtTitan=Dense clouds obscure most of the surface in the visible portion of the spectrum, providing little useful data.
-		LookingAtUranus=Uranus' light blue and white clouds cover the entire planet, obscuring any observations of its interior.
-		LookingAtPluto=Pluto looks a bit dim and blurry from this distance, a closer view will be necessary to see any details.
+		LookingAtMercury=#autoLOC_TST_0150 //Mercury's surface is covered with craters of various ages; the ejecta from some newer craters is clearly visible through the telescope.
+		LookingAtVenus=#autoLOC_TST_0151 //Faint changes in the cloud cover suggest the presence of some high altitude mountains or volcanoes in this area.
+		LookingAtMoon=#autoLOC_TST_0152 //Much of the Moon's bright surface is covered with overlapping craters.
+		LookingAtMars=#autoLOC_TST_0153 //There seem to be a lot of red things on Mars, closer inspection is warranted.
+		LookingAtDeimos=#autoLOC_TST_0154 //This thing looks more like a large asteroid than a moon when viewed up close.
+		LookingAtPhobos=#autoLOC_TST_0155 //Up close, Phobos resembles nothing if not a large, very dark, asteroid.
+		LookingAtJupiter=#autoLOC_TST_0156 //Bands of different coloured clouds are visible in Jupiter's atmosphere; each band being driven in opposite directions by fierce winds.
+		LookingAtIo=#autoLOC_TST_0157 //Colourful yellow, red, and sometimes green materials coat areas of Io's surface, sometimes centered around active volcanoes.
+		LookingAtEuropa=#autoLOC_TST_0158 //Relatively smooth, bright white terrain covers most of Europa's surface.
+		LookingAtGanymede=#autoLOC_TST_0159 //Ganymede's terrain is heavily cratered in most areas and appears to be mostly water ice covered by a thin layer of dark regolith.
+		LookingAtCallisto=#autoLOC_TST_0160 //The surface of Callisto is almost saturated with impact craters, every further impact will almost always overlap with older craters.
+		LookingAtSaturn=#autoLOC_TST_0161 //Saturn's thick cloud layer obscures all but the outermost layers of its atmosphere.
+		LookingAtTitan=#autoLOC_TST_0162 //Dense clouds obscure most of the surface in the visible portion of the spectrum, providing little useful data.
+		LookingAtUranus=#autoLOC_TST_0163 //Uranus' light blue and white clouds cover the entire planet, obscuring any observations of its interior.
+		LookingAtPluto=#autoLOC_TST_0164 //Pluto looks a bit dim and blurry from this distance, a closer view will be necessary to see any details.
 	}
 }
 
@@ -24,17 +24,17 @@
 {
 	@RESULTS
 	{		
-		MercurySrfLanded=Scans of vaporized surface materials indicate that Mercury is nearly entirely covered with layers of igneous rock.
-		VenusSrfLanded=Laser analysis of the surface of Venus reveals an elemental composition similar to that of most rocky planets; primarily silicate in nature.
-		MoonSrfLanded=Sustained blasts from the laser vaporize the surface layers of Lunar regolith, however nothing but more regolith is discovered below.
-		MarsSrfLanded=Significant concentrations of iron oxide are detected in the surface of Mars, the presence of which is responsible for the planet's red colouring.
-		DeimosSrfLanded=The loosely compacted surface of Deimos is nearly blasted apart by the laser beam. Nothing but ordinary silicates are detected in the vaporized remains.
-		PhobosSrfLanded=Scans of the surface of Phobos reveal silicate minerals common to many types of asteroids.		
-		IoSrfLanded=Traces of various sulfur compounds are detected in scans of Io's surface.
-		EuropaSrfLanded=The laser bores a surprisingly deep hole in Europa's surface, releasing a significant amount of steam.
-		GanymedeSrfLanded=Scans of Ganymede's surface reveal a mix of water ice, silicate compounds, along with traces of some organic compounds.
-		CallistoSrfLanded=Signs of water ice are found covering most of the surface of Callisto.
-		TitanSrfLanded=The laser vaporizes a sample of Titan's surface, producing a brownish cloud of energetic dust.
-		PlutoSrfLanded=Scans of the surface here reveal mostly oxygen and hydrogen, probably in the form of water ice.
+		MercurySrfLanded=#autoLOC_TST_0165 //Scans of vaporized surface materials indicate that Mercury is nearly entirely covered with layers of igneous rock.
+		VenusSrfLanded=#autoLOC_TST_0166 //Laser analysis of the surface of Venus reveals an elemental composition similar to that of most rocky planets; primarily silicate in nature.
+		MoonSrfLanded=#autoLOC_TST_0167 //Sustained blasts from the laser vaporize the surface layers of Lunar regolith, however nothing but more regolith is discovered below.
+		MarsSrfLanded=#autoLOC_TST_0168 //Significant concentrations of iron oxide are detected in the surface of Mars, the presence of which is responsible for the planet's red colouring.
+		DeimosSrfLanded=#autoLOC_TST_0169 //The loosely compacted surface of Deimos is nearly blasted apart by the laser beam. Nothing but ordinary silicates are detected in the vaporized remains.
+		PhobosSrfLanded=#autoLOC_TST_0170 //Scans of the surface of Phobos reveal silicate minerals common to many types of asteroids.		
+		IoSrfLanded=#autoLOC_TST_0171 //Traces of various sulfur compounds are detected in scans of Io's surface.
+		EuropaSrfLanded=#autoLOC_TST_0172 //The laser bores a surprisingly deep hole in Europa's surface, releasing a significant amount of steam.
+		GanymedeSrfLanded=#autoLOC_TST_0173 //Scans of Ganymede's surface reveal a mix of water ice, silicate compounds, along with traces of some organic compounds.
+		CallistoSrfLanded=#autoLOC_TST_0174 //Signs of water ice are found covering most of the surface of Callisto.
+		TitanSrfLanded=#autoLOC_TST_0175 //The laser vaporizes a sample of Titan's surface, producing a brownish cloud of energetic dust.
+		PlutoSrfLanded=#autoLOC_TST_0176 //Scans of the surface here reveal mostly oxygen and hydrogen, probably in the form of water ice.
 	}
 }
