--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
@@ -1,7 +1,7 @@
 EXPERIMENT_DEFINITION
 {
 	id = TarsierSpaceTech.SpaceTelescope
-	title = Space Telescope
+	title = #autoLOC_TST_0248 //Space Telescope
 	baseValue = 20
 	scienceCap = 25
 	dataScale = 3
@@ -12,34 +12,34 @@ EXPERIMENT_DEFINITION
 	
 	RESULTS
 	{
-		default=Took a great scientific picture of a distant body.
-		default=Ok who's the wise guy who put bubble gum on the camera lens?
-		LookingAtSun=That burning smell is your corneas.
-		LookingAtKerbin=Is that my house there? Or is there some dirt on the lens.
-		LookingAtMun=Just what we need, another picture of the Mun.
-		LookingAtMinmus=Hang on...there's another moon there?
-		LookingAtMoho=That looks like a nice lump of clay.
-		LookingAtEve=It's a shame more planets aren't purple.
-		LookingAtDuna=You wonder if you can go skiing at the poles.
-		LookingAtDres=Doesn't look like anything exciting is going on there.
-		LookingAtJool=That's going to make a lovely postcard.
-		LookingAtLaythe=That planet reminds you of home.
-		LookingAtEeloo=This was a long way to come just for a picture.	
-		LookingAtGalaxy1=Two fluffy clouds.
-		LookingAtGalaxy2=It's like a big plate or is it a dish?	
-		LookingAtGalaxy3=It goes around and around.	
-		LookingAtGalaxy4=Is it a horse? Eee Awww, No I think it's a Donkey.
-		LookingAtGalaxy5=That's a big explosion!
-		LookingAtGalaxy6=It kinda just looks like a giant plug hole.
-		LookingAtGalaxy7=Is this a sign of alien life? Looks like my fingerprint.
-		LookingAtGalaxy8=Mmmm Strawberries and Cream.		
+		default=#autoLOC_TST_0177 //Took a great scientific picture of a distant body.
+		default=#autoLOC_TST_0178 //Ok who's the wise guy who put bubble gum on the camera lens?
+		LookingAtSun=#autoLOC_TST_0179 //That burning smell is your corneas.
+		LookingAtKerbin=#autoLOC_TST_0180 //Is that my house there? Or is there some dirt on the lens.
+		LookingAtMun=#autoLOC_TST_0181 //Just what we need, another picture of the Mun.
+		LookingAtMinmus=#autoLOC_TST_0182 //Hang on...there's another moon there?
+		LookingAtMoho=#autoLOC_TST_0183 //That looks like a nice lump of clay.
+		LookingAtEve=#autoLOC_TST_0184 //It's a shame more planets aren't purple.
+		LookingAtDuna=#autoLOC_TST_0185 //You wonder if you can go skiing at the poles.
+		LookingAtDres=#autoLOC_TST_0186 //Doesn't look like anything exciting is going on there.
+		LookingAtJool=#autoLOC_TST_0187 //That's going to make a lovely postcard.
+		LookingAtLaythe=#autoLOC_TST_0188 //That planet reminds you of home.
+		LookingAtEeloo=#autoLOC_TST_0189 //This was a long way to come just for a picture.	
+		LookingAtGalaxy1=#autoLOC_TST_0190 //Two fluffy clouds.
+		LookingAtGalaxy2=#autoLOC_TST_0191 //It's like a big plate or is it a dish?	
+		LookingAtGalaxy3=#autoLOC_TST_0192 //It goes around and around.	
+		LookingAtGalaxy4=#autoLOC_TST_0193 //Is it a horse? Eee Awww, No I think it's a Donkey.
+		LookingAtGalaxy5=#autoLOC_TST_0194 //That's a big explosion!
+		LookingAtGalaxy6=#autoLOC_TST_0195 //It kinda just looks like a giant plug hole.
+		LookingAtGalaxy7=#autoLOC_TST_0196 //Is this a sign of alien life? Looks like my fingerprint.
+		LookingAtGalaxy8=#autoLOC_TST_0197 //Mmmm Strawberries and Cream.		
 	}
 }
 
 EXPERIMENT_DEFINITION
 {
 	id = TarsierSpaceTech.ChemCam
-	title = ChemCam
+	title = #autoLOC_TST_0053 //ChemCam
 	baseValue = 15
 	scienceCap = 18
 	dataScale = 2.5
@@ -50,33 +50,33 @@ EXPERIMENT_DEFINITION
 	
 	RESULTS
 	{
-		default = The spectrometer confirms that the sample is indeed a combination of elements.
-		default = The spectrometer data is nonsense, who thought firing a laser at a rock was actually a good idea.
-		default = Shooting rocks is fun, lets do it again...what?! this is a science experiment?
+		default = #autoLOC_TST_0198 //The spectrometer confirms that the sample is indeed a combination of elements.
+		default = #autoLOC_TST_0199 //The spectrometer data is nonsense, who thought firing a laser at a rock was actually a good idea.
+		default = #autoLOC_TST_0200 /Shooting rocks is fun, lets do it again...what?! this is a science experiment?
 
-		KerbinSrfLandedGrasslands = The spectrum shows large quantities of water and organic matter...you may have just shot an insect
-		KerbinSrfLandedHighlands = The spectrum shows peaks at Silicon, Aluminium and Oxygen.
-		KerbinSrfLandedMountains = The rocks here are very uninteresting, at least the scenery is nice.
-		KerbinSrfLandedDeserts = Silicon, lots and lots of Silicon.
-		KerbinSrfLandedTundra = The rocks here are very uninteresting, as is the scenery.
-		KerbinSrfLandedIceCaps = The spectrum shows there is water present but not much else.
-		KerbinSrfLandedShores = Silicon and Water, the ingredients for a sandcastle.
-		KerbinSrfLandedBadlands = The geology of the area definitely does not live up to the name.
-		KerbinSrfLandedLaunchPad = It turns out management do not like the laser being tested on the launch pad.
-		KerbinSrfLandedRunway = You notice a nearby fuel spill that could make a great experiment.
-		KerbinSrfLandedKSC = The experiment shows that is fun to shoot at scientists with lasers.
+		KerbinSrfLandedGrasslands = #autoLOC_TST_0201 //The spectrum shows large quantities of water and organic matter...you may have just shot an insect
+		KerbinSrfLandedHighlands = #autoLOC_TST_0202 //The spectrum shows peaks at Silicon, Aluminium and Oxygen.
+		KerbinSrfLandedMountains = #autoLOC_TST_0203 //The rocks here are very uninteresting, at least the scenery is nice.
+		KerbinSrfLandedDeserts = #autoLOC_TST_0204 //Silicon, lots and lots of Silicon.
+		KerbinSrfLandedTundra = #autoLOC_TST_0205 //The rocks here are very uninteresting, as is the scenery.
+		KerbinSrfLandedIceCaps = #autoLOC_TST_0206 //The spectrum shows there is water present but not much else.
+		KerbinSrfLandedShores = #autoLOC_TST_0207 //Silicon and Water, the ingredients for a sandcastle.
+		KerbinSrfLandedBadlands = #autoLOC_TST_0208 //The geology of the area definitely does not live up to the name.
+		KerbinSrfLandedLaunchPad = #autoLOC_TST_0209 //It turns out management do not like the laser being tested on the launch pad.
+		KerbinSrfLandedRunway = #autoLOC_TST_0210 //You notice a nearby fuel spill that could make a great experiment.
+		KerbinSrfLandedKSC = #autoLOC_TST_0211 //The experiment shows that is fun to shoot at scientists with lasers.
 
-		MunSrfLanded = The composition is surprisingly similar to Kerbin's.
-		MunSrfLanded = The spectrum is very close to that of Basalt.
-		MunSrfLanded = The spectrum appears quite messy, this appears to be a mixture of many different rock types.
-		MunSrfLanded = The rocks here are rich in precious metals.
+		MunSrfLanded = #autoLOC_TST_0212 //The composition is surprisingly similar to Kerbin's.
+		MunSrfLanded = #autoLOC_TST_0213 //The spectrum is very close to that of Basalt.
+		MunSrfLanded = #autoLOC_TST_0214 //The spectrum appears quite messy, this appears to be a mixture of many different rock types.
+		MunSrfLanded = #autoLOC_TST_0215 //The rocks here are rich in precious metals.
 		
-		MinmusSrfLanded = The composition is almost identical to a mint dessert.
+		MinmusSrfLanded = #autoLOC_TST_0216 //The composition is almost identical to a mint dessert.
 
-		EveSrfLanded = The spectrum shows the rock here consists of purple.
+		EveSrfLanded = #autoLOC_TST_0217 //The spectrum shows the rock here consists of purple.
 
-		DunaSrfLanded = The spectrum suggests the presence of water!
+		DunaSrfLanded = #autoLOC_TST_0218 //The spectrum suggests the presence of water!
 
-		GillySrfLanded = The spectrum is very similar to that of an asteroid.
+		GillySrfLanded = #autoLOC_TST_0219 //The spectrum is very similar to that of an asteroid.
 	}
 }
