--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Agencies/Agents.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Agencies/Agents.cfg
@@ -1,8 +1,8 @@
 AGENT
 {
   name = Tarsier Space Technology
-  
-  description = Experts in the field of space science equipment, Tarsier Space Technology are building some of the most advanced components around but come with a hefty price tag.
+  title = #autoLOC_TST_0236 //Tarsier Space Technology
+  description = #autoLOC_TST_0220 //Experts in the field of space science equipment, Tarsier Space Technology are building some of the most advanced components around but come with a hefty price tag.
   
   logoURL = TarsierSpaceTech/Agencies/TarsierSpaceTechnology
   logoScaledURL = TarsierSpaceTech/Agencies/TarsierSpaceTechnology_scaled
