--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Galaxies/galaxies.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Galaxies/galaxies.cfg
@@ -1,7 +1,7 @@
 GALAXY
 {
 	name = Galaxy1
-	theName = Twin Clouds
+	displayName = #autoLOC_TST_0001 //Twin Clouds
 	textureURL = TarsierSpaceTech/Galaxies/galaxy1
 	location = 0.85696, -0.77464, -0.22952
 	size = 10
@@ -9,7 +9,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy2
-	theName = Big Plate Galaxy
+	displayName = #autoLOC_TST_0002 //Big Plate Galaxy
 	textureURL = TarsierSpaceTech/Galaxies/galaxy2
 	location = -0.50454, -0.13956, -0.99025
 	size = 12
@@ -17,7 +17,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy3
-	theName = The Roundabout
+	displayName = #autoLOC_TST_0003 //The Roundabout
 	textureURL = TarsierSpaceTech/Galaxies/galaxy3
 	location = 0.67248, 0.031668, -0.644117
 	size = 15
@@ -25,7 +25,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy4
-	theName = The Purple Donkey Nebula
+	displayName = #autoLOC_TST_0004 //The Purple Donkey Nebula
 	textureURL = TarsierSpaceTech/Galaxies/galaxy4
 	location = -0.15908, -0.86295, 0.37152
 	size = 18
@@ -33,7 +33,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy5
-	theName = The Big Pop
+	displayName = #autoLOC_TST_0005 //The Big Pop
 	textureURL = TarsierSpaceTech/Galaxies/galaxy5
 	location = -0.4057026, -0.55695, 0.123896
 	size = 2
@@ -41,7 +41,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy6
-	theName = The Great Plug Hole
+	displayName = #autoLOC_TST_0006 //The Great Plug Hole
 	textureURL = TarsierSpaceTech/Galaxies/galaxy6
 	location = 0.767182995, 0.742178, -0.310394
 	size = 6.5
@@ -49,7 +49,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy7
-	theName = The Fingerprint Galaxy
+	displayName = #autoLOC_TST_0007 //The Fingerprint Galaxy
 	textureURL = TarsierSpaceTech/Galaxies/galaxy7
 	location = 0.125135, 0.372324, -0.08718506
 	size = 17
@@ -57,7 +57,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy8
-	theName = Strawberries and Cream Cloud
+	displayName = #autoLOC_TST_0008 //Strawberries and Cream Cloud
 	textureURL = TarsierSpaceTech/Galaxies/galaxy8
 	location = 0.848314, -0.4493518, 0.4242199
 	size = 4
